--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,1 +1,53 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" type="img/png" href="img/techis-logo.png"></link>
+        <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous">
+        </link>
+        <link rel="stylesheet" href="Portfolio.css">
+        <title>Portfolio</title>
+  </head>
+
+  <body>
+      <!--NavBar-->
+    <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
+        <!--container, adjust the width for each device-->
+        <div class="container">
+            <!--navbar-brand, company or product name-->
+          <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>ortfolio</a>
+
+          <!--navbar-toggler, collapse plugin and other nav toggling behaviors-->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
+            <span class="navbar-toggler-icon"></span> 
+          </button>
+
+          <!--.collapse .navbar-collapse, grouping and hiding navbar contents by parent breakpoint-->
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <!--navbar-nav, full-height and lightweight nav-->
+                <!--ms-auto, pushing items to the left-->
+                <!--mb-2, for margin bottom for 2 levels-->
+                <ul class="navbar-nav ms-auto mb-2">
+                    <li class="nav-item">
+                        <a class="nav-link font-black" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link font-black" href="#projects">Projects</a>
+                    </li>
+                </ul>
+          </div>
+        </div>
+      </nav>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
