--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,6 +3,7 @@
   <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
         <link rel="icon" type="img/png" href="img/techis-logo.png"></link>
         <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -44,10 +45,26 @@
         </div>
       </nav>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+      <div id="about">
+        <h2><span class="font-primary">A</span>bout</h2>
+        <img src="img/sample-woman.jpg">
+        <div class="name">Jose Rodriguez</div>
+        <div class="vocation">Web Application Developer</div>
+        <div class="skills">HTML / CSS / JavaScript / React.js / Redux / Python / Django / Express.js / AWS(Basics) / Docker(Basics)</div>
+        <p>
+            Upcoming Full-Stack Web Developer currently studying as a Tech I.S. student
+        </p>
+        <div class="email">jrox9910@gmail.com</div>
+        <div class="icons">
+            <a href="#"><i class="bi bi-github"></i></a>
+            <!--ms-3, margin left 3 spaces-->
+            <a href="#"><i class="bi bi-linkedin ms-3"></i></a>
+        </div>
+
+        <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous">
+        </script>
   </body>
 </html>
