--- a/Portfolio.html
+++ b/Portfolio.html
@@ -38,7 +38,7 @@
                     <a class="nav-link font-black" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link font-black" href="#projects">Projects</a>
+                    <a class="nav-link font-black" href="#project">Projects</a>
                 </li>
             </ul>
         </div>
@@ -46,20 +46,28 @@
     </nav>
 
     <div id="about">
-    <h2><span class="font-primary">A</span>bout</h2>
-    <img src="img/sample-woman.jpg">
-    <div class="name">Jose Rodriguez</div>
-    <div class="vocation">Web Application Developer</div>
-    <div class="skills">HTML / CSS / JavaScript / React.js / Redux / Python / Django / Express.js / AWS(Basics) / Docker(Basics)</div>
-    <p>
-        Upcoming Full-Stack Web Developer currently studying as a Tech I.S. student
-    </p>
-    <div class="email">jrox9910@gmail.com</div>
-    <div class="icons">
-        <a href="#"><i class="bi bi-github"></i></a>
-        <!--ms-3, margin left 3 spaces-->
-        <a href="#"><i class="bi bi-linkedin ms-3"></i></a>
-    </div>
+        <h2><span class="font-primary">A</span>bout</h2>
+        <img src="img/sample-woman.jpg">
+        <div class="name">
+            Jose Rodriguez
+        </div>
+        <div class="vocation">
+            Web Application Developer
+        </div>
+        <div class="skills">
+            HTML / CSS / JavaScript / React.js / Redux / Python / Django / Express.js / AWS(Basics) / Docker(Basics)
+        </div>
+        <p>
+            Upcoming Full-Stack Web Developer currently studying as a Tech I.S. student
+        </p>
+        <div class="email">
+            jrox9910@gmail.com
+        </div>
+        <div class="icons">
+            <a href="#"><i class="bi bi-github"></i></a>
+            <!--ms-3, margin left 3 spaces-->
+            <a href="#"><i class="bi bi-linkedin ms-3"></i></a>
+        </div>
     </div>
 
     <div id="project">
