--- a/Portfolio.html
+++ b/Portfolio.html
@@ -72,7 +72,7 @@
 
     <div id="project">
         <h2><span class="font-primary">P</span>rojects</h2>
-
+        <!--Twitter card-->
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </div>
-
+        <!--Netflix card-->
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
