--- a/Portfolio.html
+++ b/Portfolio.html
@@ -47,7 +47,7 @@
 
     <div id="about">
         <h2><span class="font-primary">A</span>bout</h2>
-        <img src="img/sample-woman.jpg">
+        <img src="Img/sample-woman.jpg">
         <div class="name">
             Jose Rodriguez
         </div>
@@ -76,7 +76,7 @@
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="img/project-twitter.png" alt="Twitter Project">
+                    <img src="Img/project-twitter.png" alt="Twitter Project">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -97,7 +97,7 @@
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="img/project-netflix.png" alt="Netflix Project">
+                    <img src="Img/project-netflix.png" alt="Netflix Project">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
