--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-        <link rel="icon" type="img/png" href="img/techis-logo.png"></link>
-        <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-        crossorigin="anonymous">
-        </link>
-        <link rel="stylesheet" href="Portfolio.css">
-        <title>Portfolio</title>
-  </head>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="icon" type="img/png" href="img/techis-logo.png">
+    </link>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    </link>
+    <link rel="stylesheet" href="Portfolio.css">
+    <title>Portfolio</title>
+</head>
 
 <body>
     <!--NavBar-->
-<nav class="navbar navbar-expand-lg navbar-light shadow-sm">
-    <!--container, adjust the width for each device-->
-    <div class="container">
-        <!--navbar-brand, company or product name-->
-        <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>ortfolio</a>
+    <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
+        <!--container, adjust the width for each device-->
+        <div class="container">
+            <!--navbar-brand, company or product name-->
+            <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>ortfolio</a>
 
-        <!--navbar-toggler, collapse plugin and other nav toggling behaviors-->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
-        <span class="navbar-toggler-icon"></span> 
-        </button>
+            <!--navbar-toggler, collapse plugin and other nav toggling behaviors-->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <!--.collapse .navbar-collapse, grouping and hiding navbar contents by parent breakpoint-->
-        <div class="collapse navbar-collapse" id="navbarToggler">
-            <!--navbar-nav, full-height and lightweight nav-->
-            <!--ms-auto, pushing items to the left-->
-            <!--mb-2, for margin bottom for 2 levels-->
-            <ul class="navbar-nav ms-auto mb-2">
-                <li class="nav-item">
-                    <a class="nav-link font-black" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link font-black" href="#project">Projects</a>
-                </li>
-            </ul>
+            <!--.collapse .navbar-collapse, grouping and hiding navbar contents by parent breakpoint-->
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <!--navbar-nav, full-height and lightweight nav-->
+                <!--ms-auto, pushing items to the left-->
+                <!--mb-2, for margin bottom for 2 levels-->
+                <ul class="navbar-nav ms-auto mb-2">
+                    <li class="nav-item">
+                        <a class="nav-link font-black" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link font-black" href="#project">Projects</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
     </nav>
 
     <div id="about">
@@ -64,7 +63,7 @@
             jrox9910@gmail.com
         </div>
         <div class="icons">
-            <a href="#"><i class="bi bi-github"></i></a>
+            <a href="https://github.com/jrox1"><i class="bi bi-github"></i></a>
             <!--ms-3, margin left 3 spaces-->
             <a href="#"><i class="bi bi-linkedin ms-3"></i></a>
         </div>
@@ -72,44 +71,79 @@
 
     <div id="project">
         <h2><span class="font-primary">P</span>rojects</h2>
-        <!--Twitter card-->
+        <!--Money-Count-->
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="Img/project-twitter.png" alt="Twitter Project">
+                    <video src="Videos/Money-Count.mov" autoplay controls></video>
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title">Twitter Clone</h5>
-                        <p class="card-text">This is a Twitter based project made using Django</p>
+                        <h5 class="card-title">Money-Count</h5>
+                        <p class="card-text"> <strong>Project Description:</strong> This project is an online ledger to
+                            help you track your expenditure and income accurately and effectively monitor your spending.
+                            It is created in a user-friendly manner are diagrammatic and graphical representations to
+                            enhance your understanding, save you time from the tedious process of bookkeeping, giving
+                            you the ability to sync and manage your entire bookkeeping in a single app.</p> <br>
+                        <p> <strong>Skills Used:</strong>FrontEnd: React-Redux | Backend: Django API.</p>
                         <p class="card-text"><small class="text-muted">
-                            Test Login Account <br>
-                            Email: test@gmail.com <br>
-                            Password: 1234
-                        </small></p>
-                        <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
-                        <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
+                                Test Login Account <br>
+                                Email: session@session.com<br>
+                                Password: 1234
+                            </small></p>
+                        <a href="https://money-count-frontend.herokuapp.com/" target="_blank"
+                            class="btn btn-secondary">Website Link</a>
+                        <a href="https://github.com/Money-Count/Money-Count" target="_blank"
+                            class="btn btn-secondary">Github Link</a>
                     </div>
                 </div>
             </div>
         </div>
-        <!--Netflix card-->
+        <!--Restore Cafe-->
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="Img/project-netflix.png" alt="Netflix Project">
+                    <video src="Videos/Restore-Cafe.mov" autoplay controls></video>
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title">Netflix Clone</h5>
-                        <p class="card-text">This is a Netflix based project using HTML / CSS / JS</p>
-                        <p class="card-text"><small class="text-muted">
-                            Test Login Account <br>
-                            Email: test@gmail.com <br>
-                            Password: 1234
-                        </small></p>
-                        <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
-                        <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
+                        <h5 class="card-title">Restore Cafe</h5>
+                        <p class="card-text"><strong>Project Description:</strong>This is an online food menu service
+                            for Cj Cafe. When you visit the restaurant, you often use the QR code to load the PDF of the
+                            menu. It has no image and is not easy to select. So we created the menu app where you can
+                            see food images with the needed information and select your items easily. During such an
+                            unprecedented time and social distancing, online menu card technology is a boon!
+                        </p>
+                        <p> <strong>Skills Used:</strong>FrontEnd: React-Redux | Backend: Django API.</p>
+                        <a href="https://frontend-restorecafe.herokuapp.com/" target="_blank"
+                            class="btn btn-secondary">Website Link</a>
+                        <a href="https://github.com/jrox1/Restore-Cafe" target="_blank" class="btn btn-secondary">Github
+                            Link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Twitter Clone-->
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <video src="Videos/Twitter-Clone.mov" autoplay controls></video>
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Twitter Clone</h5>
+                        <p class="card-text"><strong>Project Description:</strong>With this project, we created a
+                            platform where you can express your thoughts anonymously, showcase your pictures, and much
+                            more on a single website. Post, edit, or delete posts at the convenience of just a few
+                            touches. This project is based on Twitter and anonymity adds to its special features.
+                            Without the necessity of an account, you can share your thoughts and memories with the world
+                            at any time. You can even learn CRUD(Create/Read/Update/Delete) through this project.
+                        </p>
+                        <p> <strong>Skills Used:</strong>Django | HTML | CSS | Bootstrap | JavaScript | Cloudinary.</p>
+                        <a href="https://twitterclone-joser.herokuapp.com/" target="_blank"
+                            class="btn btn-secondary">Website Link</a>
+                        <a href="https://github.com/jrox1/Twitter_clone" target="_blank" class="btn btn-secondary">Github
+                            Link</a>
                     </div>
                 </div>
             </div>
@@ -117,10 +151,9 @@
 
     </div>
 
-    <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
 </body>
+
 </html>
