--- a/Portfolio.html
+++ b/Portfolio.html
@@ -46,7 +46,7 @@
 
     <div id="about">
         <h2><span class="font-primary">A</span>bout</h2>
-        <img src="Img/sample-woman.jpg">
+        <img src="Img/jose.png.jpg">
         <div class="name">
             Jose Rodriguez
         </div>
@@ -65,7 +65,7 @@
         <div class="icons">
             <a href="https://github.com/jrox1"><i class="bi bi-github"></i></a>
             <!--ms-3, margin left 3 spaces-->
-            <a href="#"><i class="bi bi-linkedin ms-3"></i></a>
+            <a href="https://www.linkedin.com/in/jose-m-rodriguez-/"><i class="bi bi-linkedin ms-3"></i></a>
         </div>
     </div>
 
