--- a/Portfolio.html
+++ b/Portfolio.html
@@ -51,7 +51,7 @@
             Jose Rodriguez
         </div>
         <div class="vocation">
-            Web Application Developer
+            Full-Stack Developer
         </div>
         <div class="skills">
             HTML / CSS / JavaScript / React.js / Redux / Python / Django / Express.js / AWS(Basics) / Docker(Basics)
