--- a/Portfolio.html
+++ b/Portfolio.html
@@ -57,10 +57,10 @@
             HTML / CSS / JavaScript / React.js / Redux / Python / Django / Express.js / AWS(Basics) / Docker(Basics)
         </div>
         <p>
-            Upcoming Full-Stack Web Developer currently studying as a Tech I.S. student
+            Full-Stack Web Developer fully certified from TECH I.S.
         </p>
         <div class="email">
-            jrox9910@gmail.com
+            rodriguezmanueljose1998@gmail.com
         </div>
         <div class="icons">
             <a href="https://github.com/jrox1"><i class="bi bi-github"></i></a>
