--- a/Portfolio.html
+++ b/Portfolio.html
@@ -107,9 +107,9 @@
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title">Restore Cafe</h5>
+                        <h5 class="card-title">Restro Cafe</h5>
                         <p class="card-text"><strong>Project Description:</strong>This is an online food menu service
-                            for Restore Cafe. When you visit the restaurant, you often use the QR code to load the PDF of the
+                            for Restro Cafe. When you visit the restaurant, you often use the QR code to load the PDF of the
                             menu. It has no image and is not easy to select. So we created the menu app where you can
                             see food images with the needed information and select your items easily. During such an
                             unprecedented time and social distancing, online menu card technology is a boon!
